@@ -3483,6 +3483,7 @@ $wgMessageStructure = array(
 		'watchlistedit-normal-legend',
 		'watchlistedit-normal-explain',
 		'watchlistedit-normal-submit',
+		'watchlistedit-normal-submiting',
 		'watchlistedit-normal-done',
 		'watchlistedit-raw-title',
 		'watchlistedit-raw-legend',
